--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "ES2020",
     "sourceMap": false,
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
     "outDir": "./dist",
-    "removeComments": true
+    "removeComments": true,
+    "strict": true
   },
   "include": ["./src/**/*"]
 }
